# hydra-dask-launcher

./: .gitignore  README.md  pyproject.toml
src/hydra_plugins/hydra_dask_launcher/: __init__.py  config.py  launcher.py
tests/: test_dask_launcher.py
