[project]
authors = [{name = "Quentin Febvre", email = "quentin.febvre@imt-atlantique.fr"}]
name = "hydra_dask_launcher"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["hydra-core>=1.3.2,<2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ['src/hydra_plugins']

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]
preview = ["pixi-build"]

[tool.pixi.pypi-dependencies]
hydra_dask_launcher = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.11.*"
dask = ">=2025.7.0,<2026"
distributed = ">=2025.7.0,<2026"
joblib = ">=1.5.1,<2"

[tool.pixi.package] 
name = "hydra-dask-launcher"
version = "0.1.3"

[tool.pixi.package.build] 
backend = { name = "pixi-build-python", version = "*" }
channels = [
  "https://prefix.dev/pixi-build-backends",
  "https://prefix.dev/conda-forge",
]

[tool.pixi.package.host-dependencies]
hatchling = "*"
